--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,25 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>XX Watts</title>
+
+    <meta name="description" content="${content}"/>
+    <meta name="keywords" content="XX Watts, ${comma separated services-titles}"/>
+    <meta name="robots" content="index/follow"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg"/>
+
+    <meta itemprop="name" content="${content}"/>
+    <meta itemprop="description" content="${content}"/>
+    <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}"/>
+
+    <meta property="og:title" content="${content}"/>
+    <meta property="og:image" content="${%PUBLIC_URL%/og.jpg}"/>
+    <meta property="og:description" content="${content}"/>
+
+    <meta name="theme-color" content="#fff"/>
+    <meta name="msapplication-navbutton-color" content="#fff"/>
+
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -30,7 +49,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>XX Watts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
