--- a/public/index.html
+++ b/public/index.html
@@ -2,33 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="/" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta name="description" content="Web site created using create-react-app" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>XX Watts</title>
 
-    <meta name="description" content="${content}"/>
-    <meta name="keywords" content="XX Watts, ${comma separated services-titles}"/>
-    <meta name="robots" content="index/follow"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg"/>
+    <meta name="description" content="${content}" />
+    <meta name="keywords" content="XX Watts, ${comma separated services-titles}" />
+    <meta name="robots" content="index/follow" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
 
-    <meta itemprop="name" content="${content}"/>
-    <meta itemprop="description" content="${content}"/>
-    <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}"/>
+    <meta itemprop="name" content="${content}" />
+    <meta itemprop="description" content="${content}" />
+    <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}" />
 
-    <meta property="og:title" content="${content}"/>
-    <meta property="og:image" content="${%PUBLIC_URL%/og.jpg}"/>
-    <meta property="og:description" content="${content}"/>
+    <meta property="og:title" content="${content}" />
+    <meta property="og:image" content="${%PUBLIC_URL%/og.jpg}" />
+    <meta property="og:description" content="${content}" />
 
-    <meta name="theme-color" content="#fff"/>
-    <meta name="msapplication-navbutton-color" content="#fff"/>
+    <meta name="theme-color" content="#fff" />
+    <meta name="msapplication-navbutton-color" content="#fff" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
