--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content=" A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>XX Watts</title>
+    <title>20 Watts - A Creative Solutions Agency based in Mumbai</title>
 
-    <meta name="description" content="${content}" />
+    <meta name="description" content=" A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences" />
     <meta name="keywords" content="XX Watts, ${comma separated services-titles}" />
     <meta name="robots" content="index/follow" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
 
-    <meta itemprop="name" content="${content}" />
-    <meta itemprop="description" content="${content}" />
+    <meta itemprop="name" content="20 Watts - A Creative Solutions Agency based in Mumbai" />
+    <meta itemprop="description" content="A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences" />
     <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}" />
 
-    <meta property="og:title" content="${content}" />
+    <meta property="og:title" content="20 Watts - A Creative Solutions Agency based in Mumbai" />
     <meta property="og:image" content="${%PUBLIC_URL%/og.jpg}" />
-    <meta property="og:description" content="${content}" />
+    <meta property="og:description" content=" A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences" />
 
     <meta name="theme-color" content="#fff" />
     <meta name="msapplication-navbutton-color" content="#fff" />
@@ -46,6 +50,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F74J3P8P7D"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-F74J3P8P7D');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
