--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content=" A creative solutions agency backed by an in-house production and post-production team.
@@ -15,7 +15,7 @@
     We build comprehensive, creative and purpose-driven brands and experiences" />
     <meta name="keywords" content="XX Watts, ${comma separated services-titles}" />
     <meta name="robots" content="index/follow" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta itemprop="name" content="20 Watts - A Creative Solutions Agency based in Mumbai" />
     <meta itemprop="description" content="A creative solutions agency backed by an in-house production and post-production team.
@@ -23,7 +23,7 @@
     <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}" />
 
     <meta property="og:title" content="20 Watts - A Creative Solutions Agency based in Mumbai" />
-    <meta property="og:image" content="${%PUBLIC_URL%/og.jpg}" />
+    <meta property="og:image" content= />
     <meta property="og:description" content=" A creative solutions agency backed by an in-house production and post-production team.
     We build comprehensive, creative and purpose-driven brands and experiences" />
 
