--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,89 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content=" A creative solutions agency backed by an in-house production and post-production team.
-    We build comprehensive, creative and purpose-driven brands and experiences" />
+    <meta
+      name="description"
+      content=" A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>20 Watts - A Creative Solutions Agency based in Mumbai</title>
 
-    <meta name="description" content=" A creative solutions agency backed by an in-house production and post-production team.
-    We build comprehensive, creative and purpose-driven brands and experiences" />
-    <meta name="keywords" content="XX Watts, ${comma separated services-titles}" />
+    <meta
+      name="description"
+      content=" A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences"
+    />
+    <meta
+      name="keywords"
+      content="XX Watts, ${comma separated services-titles}"
+    />
     <meta name="robots" content="index/follow" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <meta itemprop="name" content="20 Watts - A Creative Solutions Agency based in Mumbai" />
-    <meta itemprop="description" content="A creative solutions agency backed by an in-house production and post-production team.
-    We build comprehensive, creative and purpose-driven brands and experiences" />
+    <meta
+      itemprop="name"
+      content="20 Watts - A Creative Solutions Agency based in Mumbai"
+    />
+    <meta
+      itemprop="description"
+      content="A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences"
+    />
     <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}" />
 
-    <meta property="og:title" content="20 Watts - A Creative Solutions Agency based in Mumbai" />
+    <meta
+      property="og:title"
+      content="20 Watts - A Creative Solutions Agency based in Mumbai"
+    />
     <meta property="og:image" content= />
-    <meta property="og:description" content=" A creative solutions agency backed by an in-house production and post-production team.
-    We build comprehensive, creative and purpose-driven brands and experiences" />
+    <meta
+      property="og:description"
+      content=" A creative solutions agency backed by an in-house production and post-production team.
+    We build comprehensive, creative and purpose-driven brands and experiences"
+    />
 
     <meta name="theme-color" content="#fff" />
     <meta name="msapplication-navbutton-color" content="#fff" />
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    /> -->
+
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    /></noscript>
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    /> -->
+
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    /></noscript>
+
+    <link rel="apple-touch-icon" href="./public/favicon.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -50,15 +100,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    /> -->
+
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    /></noscript>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F74J3P8P7D"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    <script
+      defer
+      src="https://www.googletagmanager.com/gtag/js?id=G-F74J3P8P7D"
+    ></script>
+    <script defer>
+      window.addEventListener("load", function () {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
 
-      gtag('config', 'G-F74J3P8P7D');
+        gtag("config", "G-F74J3P8P7D");
+      });
     </script>
   </head>
   <body>
